fix swatch align

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5283,7 +5283,7 @@ iframe .ytp-watermark {
 .product-swatches {
     display: flex;
     gap: 6px;
-    justify-content: center;
+    justify-content: left;
     margin-bottom: 7px;
 }
 .swatch {
